--- a/customer.html
+++ b/customer.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Đây là khách hàng</h1>
+    <h1>Đây là khách hàng thương gia</h1>
 </body>
 </html>
