--- a/about.html
+++ b/about.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Giới thiệu...</h1>
-    <p>Hôm nay là một ngày tuyệt vời</p>
+    <p>Hôm nay là một ngày tuyệt vời 1</p>
 </body>
 </html>
