--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Đây là trang liên hệ</h1>
+    <h1>Đây là trang liên hệ 1</h1>
 </body>
 </html>
