--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Đây là trang chủ</h1>
+    <h1>Đây là trang chủ 1</h1>
+    <p>Nội dung haha</p>
 </body>
 </html>
